--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,8 @@
         android:theme="@style/Theme.GoHangOut"
         tools:targetApi="31">
 
-        <activity android:name=".AddPlaceActivity" />
-        <activity android:name=".MapActivity" />
+        <activity android:name=".add.AddPlaceActivity" />
+        <activity android:name=".map.MapActivity" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -51,6 +51,11 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".map.PlaceDetailActivity"
+            android:label="Place Details"
+            android:exported="false">
         </activity>
     </application>
 
